--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success pt-4 pb-4">
       <div class="container">
         <a class="navbar-brand" href="#">Nama Website</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,8 +39,8 @@
 
     <div class="container">
       
-      <div class="row mt-3 justify-content-center">
-        <div class="col-md-8 col-xs-12 isi-content">
+      <div class="row mt-3 justify-content-center mb-5">
+        <div class="col-md-8 col-xs-12 isi-content mb-5">
 
         </div>
 
@@ -48,11 +48,11 @@
 
     </div><!-- End Container -->
 
-    <footer>
-      <div class="container mt-5">
+    <footer class="bg-success pt-3 pb-1">
+      <div class="container mt-3">
         <div class="row justify-content-center">
           <div class="col-md-12">
-            <p class="text-center" id="footer">Copyright &copy; 2020 IMFDP</p>
+            <p class="text-center text-white" id="footer">Copyright &copy; 2020 IMFDP</p>
           </div>
         </div>
       </div>
